--- a/src/sections/footer/css/footer.css
+++ b/src/sections/footer/css/footer.css
@@ -120,7 +120,6 @@
     justify-content: end;
     align-items: end;
     margin-top: 25px;
-    z-index: -1;
 }
 .ul-footer-nav-menu {
     padding: 0;
